# rag_eval

./: README.md  __init__.py  evaluator.py  examples.py  judge.py  pyproject.toml  schemas.py
metrics/: __init__.py
providers/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py
